Bugs with header bar fixed(transition from visible to invisible wasn't okey, header on load bug when invisible, in author's page staff picked is not checked

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -607,6 +607,10 @@ margin-right:8px;}
     background-position: -27px -269px;  
     /*background-position: 0px -269px;         */
 }
+.i-caret-b
+{    
+    background-position: 0px -269px;        
+}
 .i-facebook-l
 {
     background-position: 0px -296px;         
